--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,17 @@
     <link rel="stylesheet" href="src/App.css" />
   </head>
   <body>
+    <div class="book">
+      <span class="page turn"></span>
+      <span class="page turn"></span>
+      <span class="page turn"></span>
+      <span class="page turn"></span>
+      <span class="page turn"></span>
+      <span class="page turn"></span>
+      <span class="cover"></span>
+      <span class="page"></span>
+      <span class="cover turn"></span>
+    </div>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
   </body>
